Compress csv file

--- a/01_data_prep.ipynb
+++ b/01_data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,14 +108,14 @@
        "4  Petter Mattei's \"Love in the Time of Money\" is...  positive"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load dataset\n",
-    "df = pd.read_csv(\"data/IMDB-Dataset.csv\")\n",
+    "df = pd.read_pickle(\"data/IMDB-Dataset.pkl\", compression=\"bz2\")\n",
     "print(df.shape)\n",
     "df.head()"
    ]
