Build streamlit app

--- a/03_model_training.ipynb
+++ b/03_model_training.ipynb
@@ -1171,7 +1171,7 @@
     "joblib.dump(tfidf_vectorizer, \"models/tfidf_vectorizer.pkl\")\n",
     "\n",
     "# Save the trained RandomForest classifier\n",
-    "joblib.dump(rf_classifier, \"models/randomforest_model.pkl\")\n",
+    "joblib.dump(rf_classifier, \"models/randomforest_model.pkl.bz2\", compress=\"bz2\")\n",
     "\n",
     "print(\"TF-IDF vectorizer and RandomForest model saved successfully!\")"
    ]
